--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <noscript>
       <strong>We're sorry but yo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="tony_app">222</div>
+    <div id="tony_app"></div>
     <!-- built files will be auto injected -->
   </body>
   <script src="es6.js"></script>
